testsuite/tests/parser/should_fail/T18251d.stderr

T18251d.hs:6:1: error:
    Type applications in patterns are not yet supported
